# langchain

./: .gitignore  pyproject.toml
pets-name/: langchain_helper.py  main.py
research_prompt/: main.py  research_output.txt
simple_agent/: main.py  main_custom_agent_middleware.py  main_custom_middleware.py  main_custom_model.py  main_first.py  main_multimodal.py
youtube_assistant/simple_rag/: langchain_helper.py  main.py
youtube_assistant_simple_rag/: langchain_helper.py  main.py
